tests/sealed_objects/sealed_objects.exp
Error: test.js:2
  2: var s1: string = o1.y; // error
                         ^ property `y`. Property not found in
  2: var s1: string = o1.y; // error
                      ^^ object literal

Error: test.js:7
  7: var o3: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; });
             ^^^^^^^^^^^^^^^^^^^^^^^^^^ property `y`. Property not found in
  7: var o3: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; });
                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type

Error: test.js:19
 19: var o7: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; [_:any]:number}); // error
                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. This type is incompatible with
 19: var o7: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; [_:any]:number}); // error
             ^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `y` is incompatible:
     19: var o7: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; [_:any]:number}); // error
                                  ^^^^^^ string. This type is incompatible with
     19: var o7: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; [_:any]:number}); // error
                                                                                    ^^^^^^ number

Error: test.js:19
 19: var o7: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; [_:any]:number}); // error
                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. This type is incompatible with
 19: var o7: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; [_:any]:number}); // error
             ^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `y` is incompatible:
     19: var o7: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; [_:any]:number}); // error
                                                                                    ^^^^^^ number. This type is incompatible with
     19: var o7: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; [_:any]:number}); // error
                                  ^^^^^^ string


Found 4 errors
